--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -329,7 +329,7 @@ it:
   label_password_lost: Password dimenticata
   label_home: Pannello di controllo
   label_my_page: Pagina personale
-  label_my_account: Il mio utente
+  label_my_account: Il mio account
   label_my_projects: I miei edizioni
   label_administration: Amministrazione
   label_login: Entra
@@ -342,7 +342,7 @@ it:
   label_registered_on: Registrato il
   label_activity: Attività
   label_new: Nuovo
-  label_logged_as: Collegato come
+  label_logged_as: Benvenuto 
   label_environment: Ambiente
   label_authentication: Autenticazione
   label_auth_source: Modalità di autenticazione
