--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1434,3 +1434,19 @@ it:
 
 #notice_email_sent: "Una email è stata spedita a %{value}"
   unauthorized: Non autorizzato ad accedere al contenuto
+
+#REGISTER
+  field_titolo: "Nella qualità di:"
+  field_nome: "Il Sottoscritto:"
+  field_asso_for: "Per conto di: "
+  field_asso_title: "Indicare la ragione sociale se trattasi di associazione, studio, altro ..."
+  field_affiliato: "Affiliato a:"
+  field_sigla_organismo: "Sigla Organismo: "
+  field_sigla_sede: "Con sede in:"
+  field_coni_number: "Numero iscrizione registro CONI: "
+  field_username_as_email: "L'indirizzo e-mail sarà il Vostro UserName"
+  field_codice_segnalatore: "Codice Segnalatore/Promozione:"
+  field_com: "Comunicazioni/Segnalazioni:"
+  field_privacy: "Informativa sulla privacy"
+  field_privacy_accept: "Accetto l'informativa sulla privacy"
+  field_condition: "Condizioni di utilizzo"
