--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1258,6 +1258,7 @@ it:
   label_aboutus: Chi siamo
   label_poniquesito: Richiedi
   label_home_fs: Prima pagina
+  label_workon: Lavora con noi
 
 #Fee
   label_fee: Abbonamento
