--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1450,3 +1450,4 @@ it:
   field_privacy: "Informativa sulla privacy"
   field_privacy_accept: "Accetto l'informativa sulla privacy"
   field_condition: "Condizioni di utilizzo"
+  field_condition_readed: "Ho letto le condizioni per l'uso"
