--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -11,6 +11,7 @@ it:
       short: "%d %b"
       long: "%d %B %Y"
       only_day: "%e"
+      mese_anno: "%b %Y"
 
     day_names: [Domenica, Lunedì, Martedì, Mercoledì, Giovedì, Venerdì, Sabato]
     abbr_day_names: [Dom, Lun, Mar, Mer, Gio, Ven, Sab]
