--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -915,6 +915,7 @@ it:
   error_can_not_delete_custom_field: Impossibile eliminare il campo personalizzato
   error_unable_to_connect: Impossibile connettersi (%{value})
   error_can_not_remove_role: Questo ruolo è in uso e non può essere eliminato.
+  error_can_not_remove_role_for_fee_management: Questo ruolo è in uso nella gestione degli abbonamenti e non può essere eliminato.
   error_can_not_delete_tracker: Questo tracker contiene articoli e non può essere eliminato.
   field_principal: Principale
   label_my_page_block: La mia pagina di blocco
