Ordering project by date and not nested set

--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1452,6 +1452,8 @@ it:
   results: Risultati
   label_issues_by_section: Lista articoli legati alla sezione
   notice_missing_parameters: La pagina non puo essere caricata per mancanza di informazione
+  orderedby_updated_desc: Ordinamento per data di ultimo salvataggio decrescente
+  orderedby_created_desc: Ordinamento per data di creazione decrescente
 
 #notice_email_sent: "Una email è stata spedita a %{value}"
   unauthorized: Non autorizzato ad accedere al contenuto
