--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -292,6 +292,7 @@ it:
     other: "%{count} Edizioni"
   label_project_all: tutte le edizioni
   label_project_latest: Ultime edizioni registrate
+  notice_ensure_identifier: "Attenzione: abbiamo provato ad impostare in automatico l'identificatore dell'edizione. Verifica che non sia veramente univoco prima di continuare. Usi la lista delle ultime edizioni registrate"
   label_issue: Articolo
   label_issues_latest: Ultimi articoli
   label_issues_view_all: Vedi tutti articoli
@@ -1424,7 +1425,7 @@ it:
   role_abbonato: Abbonato
   role_registered: Registrato
   role_renew: Rinnovo, In scadenza
-  role_expired: Espirato
+  role_expired: Scaduto
   role_archivied: Archiviato
   button_admin: --> Admin
   button_manager: --> Responsabile
@@ -1433,7 +1434,7 @@ it:
   button_abbonato: --> Abbonato
   button_registered: --> Registrato
   button_renew: --> Rinnovo
-  button_expired: --> Espirato
+  button_expired: --> Scaduto
   button_archivied: --> Archiviato
 
 #EDITORIAL
