--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -12,15 +12,17 @@ it:
       long: "%d %B %Y"
       only_day: "%e"
       mese_anno: "%b %Y"
+      giorno_mese_anno: "%d %b %Y"
+      giorno_settimana: "%A"
 
     day_names: [Domenica, Lunedì, Martedì, Mercoledì, Giovedì, Venerdì, Sabato]
     abbr_day_names: [Dom, Lun, Mar, Mer, Gio, Ven, Sab]
     month_names: [~, Gennaio, Febbraio, Marzo, Aprile, Maggio, Giugno, Luglio, Agosto, Settembre, Ottobre, Novembre, Dicembre]
     abbr_month_names: [~, Gen, Feb, Mar, Apr, Mag, Giu, Lug, Ago, Set, Ott, Nov, Dic]
     order:
-      - :day
-      - :month
-      - :year
+    - :day
+    - :month
+    - :year
 
   time:
     formats:
