BE > top_menus > se_visibile

--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1163,9 +1163,10 @@ it:
   label_top_section_new: Nuova Sezione
   label_ordinamento: Ord.
   label_se_visibile: Visibile?
+  label_se_visibile_menu_arts: Visibile nel menu articoli?
   label_immagine: immagine
   label_style: style
-  label_key: chiave
+  label_key: Chiave
   field_sezione_top: Descrizione Sezione
   field_ordinamento: Ordinamento
   field_se_visibile: Visibile
