jquery.js conflict prototype.js create =>  layouts/editorial_edit.erb

--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1492,3 +1492,6 @@ it:
   field_privacy_accept: "Accetto l'informativa sulla privacy"
   field_condition: "Condizioni di utilizzo"
   field_condition_readed: "Ho letto le condizioni per l'uso"
+ # user_profiles
+  field_curriculum: 'Curriculum'
+  label_curriculum: 'il Curriculum'
