--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1514,8 +1514,9 @@ it:
   field_nome: "Il Sottoscritto:"
   field_asso_for: "Per conto di: "
   field_asso_title: "Indicare la ragione sociale se trattasi di associazione, studio, altro ..."
+  field_new_asso: Nuova associazione
   field_affiliato: "Affiliato a:"
-  field_sigla_organismo: "Sigla Organismo: "
+  field_sigla_organismo: "Indica se fai parte di uno di questi organismi: "
   field_sigla_sede: "Con sede in:"
   field_coni_number: "Numero iscrizione registro CONI: "
   field_username_as_email: "L'indirizzo e-mail sarà il Vostro UserName"
